// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Tabs renders correctly 1`] = `
<DocumentFragment>
  .cache-ixreip-TabsContainer {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  overflow-x: scroll;
  position: relative;
  z-index: 0;
  -ms-overflow-style: none;
  scrollbar-width: none;
}

.cache-ixreip-TabsContainer::after {
  z-index: -1;
  content: '';
  position: absolute;
  bottom: 0;
  left: 0;
  right: 0;
  height: 2px;
  background: #d9dadd;
}

.cache-ixreip-TabsContainer::-webkit-scrollbar {
  display: none;
}

<div
    class="cache-ixreip-TabsContainer ewug27g0"
    role="tablist"
  />
</DocumentFragment>
`;

exports[`Tabs renders correctly with Tabs and last disabled 1`] = `
<DocumentFragment>
  .cache-ixreip-TabsContainer {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  overflow-x: scroll;
  position: relative;
  z-index: 0;
  -ms-overflow-style: none;
  scrollbar-width: none;
}

.cache-ixreip-TabsContainer::after {
  z-index: -1;
  content: '';
  position: absolute;
  bottom: 0;
  left: 0;
  right: 0;
  height: 2px;
  background: #d9dadd;
}

.cache-ixreip-TabsContainer::-webkit-scrollbar {
  display: none;
}

.cache-fomckk-StyledTabButton {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  padding: 8px 16px;
  cursor: pointer;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  white-space: nowrap;
  color: #464959;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  touch-action: manipulation;
  -webkit-transition: color 0.2s;
  transition: color 0.2s;
  border: none;
  background: none;
  border-bottom-width: 2px;
  border-bottom-style: solid;
  border-bottom-color: #d9dadd;
  outline: none;
  font-size: 16px;
  font-family: Asap;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 24px;
}

.cache-fomckk-StyledTabButton:hover,
.cache-fomckk-StyledTabButton:active,
.cache-fomckk-StyledTabButton:focus {
  -webkit-text-decoration: none;
  text-decoration: none;
  outline: none;
}

.cache-fomckk-StyledTabButton:focus-visible {
  outline: auto;
}

.cache-fomckk-StyledTabButton[aria-selected='true'] {
  color: #521094;
  border-bottom-color: #521094;
}

.cache-fomckk-StyledTabButton[aria-disabled='false']:not(:disabled):hover,
.cache-fomckk-StyledTabButton[aria-disabled='false']:not(:disabled):focus,
.cache-fomckk-StyledTabButton[aria-disabled='false']:not(:disabled):active {
  outline: none;
  color: #521094;
  border-bottom-color: #521094;
}

.cache-fomckk-StyledTabButton[aria-disabled='false']:not(:disabled):hover .e1hzf7cr3,
.cache-fomckk-StyledTabButton[aria-disabled='false']:not(:disabled):focus .e1hzf7cr3,
.cache-fomckk-StyledTabButton[aria-disabled='false']:not(:disabled):active .e1hzf7cr3 {
  background-color: #ece5ff;
  border-color: #ece5ff;
  color: #521094;
}

.cache-fomckk-StyledTabButton[aria-disabled='true'],
.cache-fomckk-StyledTabButton:disabled {
  cursor: not-allowed;
  -webkit-filter: grayscale(1) opacity(50%);
  filter: grayscale(1) opacity(50%);
}

.cache-1m0c41a-StyledTabButton {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  padding: 8px 16px;
  cursor: pointer;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  white-space: nowrap;
  color: #464959;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  touch-action: manipulation;
  -webkit-transition: color 0.2s;
  transition: color 0.2s;
  border: none;
  background: none;
  border-bottom-width: 2px;
  border-bottom-style: solid;
  border-bottom-color: #d9dadd;
  outline: none;
  font-size: 16px;
  font-family: Asap;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 24px;
}

.cache-1m0c41a-StyledTabButton:hover,
.cache-1m0c41a-StyledTabButton:active,
.cache-1m0c41a-StyledTabButton:focus {
  -webkit-text-decoration: none;
  text-decoration: none;
  outline: none;
}

.cache-1m0c41a-StyledTabButton:focus-visible {
  outline: auto;
}

.cache-1m0c41a-StyledTabButton[aria-selected='true'] {
  color: #521094;
  border-bottom-color: #521094;
}

.cache-1m0c41a-StyledTabButton[aria-disabled='false']:not(:disabled):hover,
.cache-1m0c41a-StyledTabButton[aria-disabled='false']:not(:disabled):focus,
.cache-1m0c41a-StyledTabButton[aria-disabled='false']:not(:disabled):active {
  outline: none;
  color: #521094;
  border-bottom-color: #521094;
}

.cache-1m0c41a-StyledTabButton[aria-disabled='true'],
.cache-1m0c41a-StyledTabButton:disabled {
  cursor: not-allowed;
  -webkit-filter: grayscale(1) opacity(50%);
  filter: grayscale(1) opacity(50%);
}

<div
    class="cache-ixreip-TabsContainer ewug27g0"
    role="tablist"
  >
    <button
      aria-disabled="false"
      aria-selected="false"
      as="button"
      class="cache-fomckk-StyledTabButton e1hzf7cr0"
      role="tab"
      type="button"
    >
      First
    </button>
    <button
      aria-disabled="false"
      aria-label="1"
      aria-selected="false"
      as="button"
      class="cache-fomckk-StyledTabButton e1hzf7cr0"
      role="tab"
      type="button"
    >
      Second
    </button>
    <button
      aria-disabled="true"
      aria-label="2"
      aria-selected="true"
      as="button"
      class="cache-1m0c41a-StyledTabButton e1hzf7cr0"
      disabled=""
      role="tab"
      type="button"
    >
      Very long tab name
    </button>
  </div>
</DocumentFragment>
`;

exports[`Tabs renders correctly with Tabs menu selected 1`] = `
<DocumentFragment>
  .cache-ixreip-TabsContainer {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  overflow-x: scroll;
  position: relative;
  z-index: 0;
  -ms-overflow-style: none;
  scrollbar-width: none;
}

.cache-ixreip-TabsContainer::after {
  z-index: -1;
  content: '';
  position: absolute;
  bottom: 0;
  left: 0;
  right: 0;
  height: 2px;
  background: #d9dadd;
}

.cache-ixreip-TabsContainer::-webkit-scrollbar {
  display: none;
}

.cache-fomckk-StyledTabButton {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  padding: 8px 16px;
  cursor: pointer;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  white-space: nowrap;
  color: #464959;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  touch-action: manipulation;
  -webkit-transition: color 0.2s;
  transition: color 0.2s;
  border: none;
  background: none;
  border-bottom-width: 2px;
  border-bottom-style: solid;
  border-bottom-color: #d9dadd;
  outline: none;
  font-size: 16px;
  font-family: Asap;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 24px;
}

.cache-fomckk-StyledTabButton:hover,
.cache-fomckk-StyledTabButton:active,
.cache-fomckk-StyledTabButton:focus {
  -webkit-text-decoration: none;
  text-decoration: none;
  outline: none;
}

.cache-fomckk-StyledTabButton:focus-visible {
  outline: auto;
}

.cache-fomckk-StyledTabButton[aria-selected='true'] {
  color: #521094;
  border-bottom-color: #521094;
}

.cache-fomckk-StyledTabButton[aria-disabled='false']:not(:disabled):hover,
.cache-fomckk-StyledTabButton[aria-disabled='false']:not(:disabled):focus,
.cache-fomckk-StyledTabButton[aria-disabled='false']:not(:disabled):active {
  outline: none;
  color: #521094;
  border-bottom-color: #521094;
}

.cache-fomckk-StyledTabButton[aria-disabled='false']:not(:disabled):hover .e1hzf7cr3,
.cache-fomckk-StyledTabButton[aria-disabled='false']:not(:disabled):focus .e1hzf7cr3,
.cache-fomckk-StyledTabButton[aria-disabled='false']:not(:disabled):active .e1hzf7cr3 {
  background-color: #ece5ff;
  border-color: #ece5ff;
  color: #521094;
}

.cache-fomckk-StyledTabButton[aria-disabled='true'],
.cache-fomckk-StyledTabButton:disabled {
  cursor: not-allowed;
  -webkit-filter: grayscale(1) opacity(50%);
  filter: grayscale(1) opacity(50%);
}

.cache-1chb2kz-StyledTabButton-StyledMenu {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  padding: 8px 16px;
  cursor: pointer;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  white-space: nowrap;
  color: #464959;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  touch-action: manipulation;
  -webkit-transition: color 0.2s;
  transition: color 0.2s;
  border: none;
  background: none;
  border-bottom-width: 2px;
  border-bottom-style: solid;
  border-bottom-color: #d9dadd;
  outline: none;
  font-size: 16px;
  font-family: Asap;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 24px;
}

.cache-1chb2kz-StyledTabButton-StyledMenu:hover,
.cache-1chb2kz-StyledTabButton-StyledMenu:active,
.cache-1chb2kz-StyledTabButton-StyledMenu:focus {
  -webkit-text-decoration: none;
  text-decoration: none;
  outline: none;
}

.cache-1chb2kz-StyledTabButton-StyledMenu:focus-visible {
  outline: auto;
}

.cache-1chb2kz-StyledTabButton-StyledMenu[aria-selected='true'] {
  color: #521094;
  border-bottom-color: #521094;
}

.cache-1chb2kz-StyledTabButton-StyledMenu[aria-disabled='false']:not(:disabled):hover,
.cache-1chb2kz-StyledTabButton-StyledMenu[aria-disabled='false']:not(:disabled):focus,
.cache-1chb2kz-StyledTabButton-StyledMenu[aria-disabled='false']:not(:disabled):active {
  outline: none;
  color: #521094;
  border-bottom-color: #521094;
}

.cache-1chb2kz-StyledTabButton-StyledMenu[aria-disabled='false']:not(:disabled):hover .e1hzf7cr3,
.cache-1chb2kz-StyledTabButton-StyledMenu[aria-disabled='false']:not(:disabled):focus .e1hzf7cr3,
.cache-1chb2kz-StyledTabButton-StyledMenu[aria-disabled='false']:not(:disabled):active .e1hzf7cr3 {
  background-color: #ece5ff;
  border-color: #ece5ff;
  color: #521094;
}

.cache-1chb2kz-StyledTabButton-StyledMenu[aria-disabled='true'],
.cache-1chb2kz-StyledTabButton-StyledMenu:disabled {
  cursor: not-allowed;
  -webkit-filter: grayscale(1) opacity(50%);
  filter: grayscale(1) opacity(50%);
}

.cache-1chb2kz-StyledTabButton-StyledMenu .edb1sh91 {
  color: inherit;
  margin-left: 8px;
  -webkit-transition: 300ms -webkit-transform ease-out;
  transition: 300ms transform ease-out;
}

.cache-1chb2kz-StyledTabButton-StyledMenu[aria-expanded='true'] .edb1sh91 {
  -webkit-transform: rotate(-180deg);
  -moz-transform: rotate(-180deg);
  -ms-transform: rotate(-180deg);
  transform: rotate(-180deg);
}

.cache-1u2dqy2-StyledIcon-sizeStyles-ArrowIcon {
  vertical-align: middle;
  fill: currentColor;
  height: 1em;
  width: 1em;
  min-width: 1em;
  min-height: 1em;
}

<div
    class="cache-ixreip-TabsContainer ewug27g0"
    role="tablist"
  >
    <button
      aria-disabled="false"
      aria-selected="false"
      as="button"
      class="cache-fomckk-StyledTabButton e1hzf7cr0"
      role="tab"
      type="button"
    >
      First
    </button>
    <button
      aria-disabled="false"
      aria-label="1"
      aria-selected="false"
      as="button"
      class="cache-fomckk-StyledTabButton e1hzf7cr0"
      role="tab"
      type="button"
    >
      Second
    </button>
    <button
      aria-disabled="false"
      aria-label="2"
      aria-selected="false"
      as="button"
      class="cache-fomckk-StyledTabButton e1hzf7cr0"
      role="tab"
      type="button"
    >
      Very long tab name
    </button>
    <button
      aria-controls="test"
      aria-disabled="false"
      aria-expanded="true"
      aria-haspopup="dialog"
      class="cache-1chb2kz-StyledTabButton-StyledMenu edb1sh90"
      role="tab"
      type="button"
    >
      More
      <svg
        class="edb1sh91 cache-1u2dqy2-StyledIcon-sizeStyles-ArrowIcon e5nqbfp0"
        viewBox="0 0 16 16"
      >
        <path
          d="M8 11c-.28 0-.55-.11-.74-.3L3.3 6.77a1.04 1.04 0 0 1 0-1.47 1.06 1.06 0 0 1 1.49 0L8 8.48l3.2-3.17a1.06 1.06 0 0 1 1.72.33 1.04 1.04 0 0 1-.23 1.14L8.74 10.7c-.2.2-.46.31-.74.31"
        />
      </svg>
    </button>
    <button
      aria-controls="id-d9i348"
      aria-disabled="true"
      aria-expanded="false"
      aria-haspopup="dialog"
      class="cache-1chb2kz-StyledTabButton-StyledMenu edb1sh90"
      disabled=""
      role="tab"
      type="button"
    >
      More again
      <svg
        class="edb1sh91 cache-1u2dqy2-StyledIcon-sizeStyles-ArrowIcon e5nqbfp0"
        viewBox="0 0 16 16"
      >
        <path
          d="M8 11c-.28 0-.55-.11-.74-.3L3.3 6.77a1.04 1.04 0 0 1 0-1.47 1.06 1.06 0 0 1 1.49 0L8 8.48l3.2-3.17a1.06 1.06 0 0 1 1.72.33 1.04 1.04 0 0 1-.23 1.14L8.74 10.7c-.2.2-.46.31-.74.31"
        />
      </svg>
    </button>
  </div>
  .cache-1ibieyd-StyledPopover {
  border-radius: 4px;
  background-color: #ffffff;
  color: #464959;
  box-shadow: 0px 4px 24px 6px #D9DADD66;
}

.cache-1scjmt9-MenuList-centerStyles-bottomStyles-bottom {
  background-color: #ffffff;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  text-align: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  color: #464959;
  border-radius: 4px;
  position: relative;
  box-shadow: 0px 0px 24px 6px #D9DADD66;
}

.cache-1scjmt9-MenuList-centerStyles-bottomStyles-bottom:after,
.cache-1scjmt9-MenuList-centerStyles-bottomStyles-bottom:before {
  border: solid transparent;
  border-width: 9px;
  content: ' ';
  height: 0;
  width: 0;
  position: absolute;
  pointer-events: none;
}

.cache-1scjmt9-MenuList-centerStyles-bottomStyles-bottom:after {
  border-color: transparent;
}

.cache-1scjmt9-MenuList-centerStyles-bottomStyles-bottom:before {
  border-color: transparent;
}

.cache-1scjmt9-MenuList-centerStyles-bottomStyles-bottom:after,
.cache-1scjmt9-MenuList-centerStyles-bottomStyles-bottom:before {
  left: 50%;
  -webkit-transform: translateX(-50%);
  -moz-transform: translateX(-50%);
  -ms-transform: translateX(-50%);
  transform: translateX(-50%);
}

.cache-1scjmt9-MenuList-centerStyles-bottomStyles-bottom:after,
.cache-1scjmt9-MenuList-centerStyles-bottomStyles-bottom:before {
  bottom: 100%;
}

.cache-1scjmt9-MenuList-centerStyles-bottomStyles-bottom:after {
  border-bottom-color: #ffffff;
}

.cache-1scjmt9-MenuList-centerStyles-bottomStyles-bottom:before {
  border-bottom-color: transparent;
}

.cache-1crvwgx-StyledItem-StyledMenuItem {
  display: inline-block;
  font-size: 14px;
  line-height: 20px;
  font-weight: inherit;
  padding: 4px 8px;
  border: none;
  border-bottom: 1px solid #d9dadd;
  cursor: pointer;
  min-width: 110px;
  color: #464959;
  background: none;
}

.cache-1crvwgx-StyledItem-StyledMenuItem svg {
  fill: #464959;
}

.cache-1crvwgx-StyledItem-StyledMenuItem:hover,
.cache-1crvwgx-StyledItem-StyledMenuItem:focus {
  color: #222638;
}

.cache-1crvwgx-StyledItem-StyledMenuItem:hover svg,
.cache-1crvwgx-StyledItem-StyledMenuItem:focus svg {
  fill: #222638;
}

.cache-1crvwgx-StyledItem-StyledMenuItem[aria-selected='true'] {
  color: #521094;
}

.cache-va7mfa-StyledItem-StyledMenuItem {
  display: inline-block;
  font-size: 14px;
  line-height: 20px;
  font-weight: inherit;
  padding: 4px 8px;
  border: none;
  border-bottom: 1px solid #d9dadd;
  cursor: pointer;
  min-width: 110px;
  color: #b5b7bd;
  cursor: not-allowed;
  background: none;
}

.cache-va7mfa-StyledItem-StyledMenuItem svg {
  fill: #b5b7bd;
}

.cache-va7mfa-StyledItem-StyledMenuItem[aria-selected='true'] {
  color: #521094;
}

<div
    class="__reakit-portal"
  >
    <div
      aria-label="Menu"
      class="cache-1ibieyd-StyledPopover e1hqs9p51"
      data-dialog="true"
      id="test"
      role="dialog"
      style="position: fixed; left: 100%; top: 100%;"
      tabindex="-1"
    >
      <div
        class="cache-1scjmt9-MenuList-centerStyles-bottomStyles-bottom e1hqs9p50"
        role="menu"
      >
        <button
          class="eeet93f0 cache-1crvwgx-StyledItem-StyledMenuItem e10f690h1"
          role="menuitem"
          type="button"
        >
          Test
        </button>
        <button
          class="eeet93f0 cache-va7mfa-StyledItem-StyledMenuItem e10f690h1"
          disabled=""
          role="menuitem"
          type="button"
        >
          Test
        </button>
        <button
          class="eeet93f0 cache-1crvwgx-StyledItem-StyledMenuItem e10f690h1"
          role="menuitem"
          type="button"
        >
          Test
        </button>
        <button
          class="eeet93f0 cache-1crvwgx-StyledItem-StyledMenuItem e10f690h1"
          role="menuitem"
          type="button"
        >
          Test 2
        </button>
        <button
          class="eeet93f0 cache-1crvwgx-StyledItem-StyledMenuItem e10f690h1"
          role="menuitem"
          type="button"
        >
          Test 2
        </button>
      </div>
    </div>
  </div>
  .cache-1ibieyd-StyledPopover {
  border-radius: 4px;
  background-color: #ffffff;
  color: #464959;
  box-shadow: 0px 4px 24px 6px #D9DADD66;
}

<div
    class="__reakit-portal"
  >
    <div
      aria-label="Menu"
      class="cache-1ibieyd-StyledPopover e1hqs9p51"
      data-dialog="true"
      hidden=""
      id="id-d9i348"
      role="dialog"
      style="display: none; position: fixed; left: 100%; top: 100%;"
      tabindex="-1"
    />
  </div>
</DocumentFragment>
`;

exports[`Tabs renders correctly with Tabs name 1`] = `
<DocumentFragment>
  .cache-ixreip-TabsContainer {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  overflow-x: scroll;
  position: relative;
  z-index: 0;
  -ms-overflow-style: none;
  scrollbar-width: none;
}

.cache-ixreip-TabsContainer::after {
  z-index: -1;
  content: '';
  position: absolute;
  bottom: 0;
  left: 0;
  right: 0;
  height: 2px;
  background: #d9dadd;
}

.cache-ixreip-TabsContainer::-webkit-scrollbar {
  display: none;
}

.cache-fomckk-StyledTabButton {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  padding: 8px 16px;
  cursor: pointer;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  white-space: nowrap;
  color: #464959;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  touch-action: manipulation;
  -webkit-transition: color 0.2s;
  transition: color 0.2s;
  border: none;
  background: none;
  border-bottom-width: 2px;
  border-bottom-style: solid;
  border-bottom-color: #d9dadd;
  outline: none;
  font-size: 16px;
  font-family: Asap;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 24px;
}

.cache-fomckk-StyledTabButton:hover,
.cache-fomckk-StyledTabButton:active,
.cache-fomckk-StyledTabButton:focus {
  -webkit-text-decoration: none;
  text-decoration: none;
  outline: none;
}

.cache-fomckk-StyledTabButton:focus-visible {
  outline: auto;
}

.cache-fomckk-StyledTabButton[aria-selected='true'] {
  color: #521094;
  border-bottom-color: #521094;
}

.cache-fomckk-StyledTabButton[aria-disabled='false']:not(:disabled):hover,
.cache-fomckk-StyledTabButton[aria-disabled='false']:not(:disabled):focus,
.cache-fomckk-StyledTabButton[aria-disabled='false']:not(:disabled):active {
  outline: none;
  color: #521094;
  border-bottom-color: #521094;
}

.cache-fomckk-StyledTabButton[aria-disabled='false']:not(:disabled):hover .e1hzf7cr3,
.cache-fomckk-StyledTabButton[aria-disabled='false']:not(:disabled):focus .e1hzf7cr3,
.cache-fomckk-StyledTabButton[aria-disabled='false']:not(:disabled):active .e1hzf7cr3 {
  background-color: #ece5ff;
  border-color: #ece5ff;
  color: #521094;
}

.cache-fomckk-StyledTabButton[aria-disabled='true'],
.cache-fomckk-StyledTabButton:disabled {
  cursor: not-allowed;
  -webkit-filter: grayscale(1) opacity(50%);
  filter: grayscale(1) opacity(50%);
}

.cache-1m0c41a-StyledTabButton {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  padding: 8px 16px;
  cursor: pointer;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  white-space: nowrap;
  color: #464959;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  touch-action: manipulation;
  -webkit-transition: color 0.2s;
  transition: color 0.2s;
  border: none;
  background: none;
  border-bottom-width: 2px;
  border-bottom-style: solid;
  border-bottom-color: #d9dadd;
  outline: none;
  font-size: 16px;
  font-family: Asap;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 24px;
}

.cache-1m0c41a-StyledTabButton:hover,
.cache-1m0c41a-StyledTabButton:active,
.cache-1m0c41a-StyledTabButton:focus {
  -webkit-text-decoration: none;
  text-decoration: none;
  outline: none;
}

.cache-1m0c41a-StyledTabButton:focus-visible {
  outline: auto;
}

.cache-1m0c41a-StyledTabButton[aria-selected='true'] {
  color: #521094;
  border-bottom-color: #521094;
}

.cache-1m0c41a-StyledTabButton[aria-disabled='false']:not(:disabled):hover,
.cache-1m0c41a-StyledTabButton[aria-disabled='false']:not(:disabled):focus,
.cache-1m0c41a-StyledTabButton[aria-disabled='false']:not(:disabled):active {
  outline: none;
  color: #521094;
  border-bottom-color: #521094;
}

.cache-1m0c41a-StyledTabButton[aria-disabled='true'],
.cache-1m0c41a-StyledTabButton:disabled {
  cursor: not-allowed;
  -webkit-filter: grayscale(1) opacity(50%);
  filter: grayscale(1) opacity(50%);
}

<div
    class="cache-ixreip-TabsContainer ewug27g0"
    role="tablist"
  >
    <button
      aria-disabled="false"
      aria-label="first"
      aria-selected="false"
      as="button"
      class="cache-fomckk-StyledTabButton e1hzf7cr0"
      role="tab"
      type="button"
    >
      First
    </button>
    <button
      aria-disabled="false"
      aria-label="second"
      aria-selected="true"
      as="button"
      class="cache-1m0c41a-StyledTabButton e1hzf7cr0"
      role="tab"
      type="button"
    >
      Second
    </button>
    <button
      aria-disabled="true"
      aria-label="three"
      aria-selected="false"
      as="button"
      class="cache-fomckk-StyledTabButton e1hzf7cr0"
      disabled=""
      role="tab"
      type="button"
    >
      Very long tab name
    </button>
  </div>
</DocumentFragment>
`;

exports[`Tabs renders correctly with Tabs with prop 1`] = `
<DocumentFragment>
  .cache-ixreip-TabsContainer {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  overflow-x: scroll;
  position: relative;
  z-index: 0;
  -ms-overflow-style: none;
  scrollbar-width: none;
}

.cache-ixreip-TabsContainer::after {
  z-index: -1;
  content: '';
  position: absolute;
  bottom: 0;
  left: 0;
  right: 0;
  height: 2px;
  background: #d9dadd;
}

.cache-ixreip-TabsContainer::-webkit-scrollbar {
  display: none;
}

.cache-1m0c41a-StyledTabButton {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  padding: 8px 16px;
  cursor: pointer;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  white-space: nowrap;
  color: #464959;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  touch-action: manipulation;
  -webkit-transition: color 0.2s;
  transition: color 0.2s;
  border: none;
  background: none;
  border-bottom-width: 2px;
  border-bottom-style: solid;
  border-bottom-color: #d9dadd;
  outline: none;
  font-size: 16px;
  font-family: Asap;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 24px;
}

.cache-1m0c41a-StyledTabButton:hover,
.cache-1m0c41a-StyledTabButton:active,
.cache-1m0c41a-StyledTabButton:focus {
  -webkit-text-decoration: none;
  text-decoration: none;
  outline: none;
}

.cache-1m0c41a-StyledTabButton:focus-visible {
  outline: auto;
}

.cache-1m0c41a-StyledTabButton[aria-selected='true'] {
  color: #521094;
  border-bottom-color: #521094;
}

.cache-1m0c41a-StyledTabButton[aria-disabled='false']:not(:disabled):hover,
.cache-1m0c41a-StyledTabButton[aria-disabled='false']:not(:disabled):focus,
.cache-1m0c41a-StyledTabButton[aria-disabled='false']:not(:disabled):active {
  outline: none;
  color: #521094;
  border-bottom-color: #521094;
}

.cache-1m0c41a-StyledTabButton[aria-disabled='true'],
.cache-1m0c41a-StyledTabButton:disabled {
  cursor: not-allowed;
  -webkit-filter: grayscale(1) opacity(50%);
  filter: grayscale(1) opacity(50%);
}

.cache-qefozn-StyledBox-StyledBadge {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  white-space: nowrap;
  border-radius: 16px;
  padding: 0 16px;
  gap: 8px;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  height: 24px;
  color: #ffffff;
  background: #521094;
  border: 1px solid #521094;
  padding: 0 8px;
  margin-left: 8px;
}

.cache-es9czf-StyledText-StyledText {
  color: #464959;
  font-size: 16px;
  font-family: Asap;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 24px;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  text-transform: uppercase;
  font-size: 12px;
  color: inherit;
}

.cache-fomckk-StyledTabButton {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  padding: 8px 16px;
  cursor: pointer;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  white-space: nowrap;
  color: #464959;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  touch-action: manipulation;
  -webkit-transition: color 0.2s;
  transition: color 0.2s;
  border: none;
  background: none;
  border-bottom-width: 2px;
  border-bottom-style: solid;
  border-bottom-color: #d9dadd;
  outline: none;
  font-size: 16px;
  font-family: Asap;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 24px;
}

.cache-fomckk-StyledTabButton:hover,
.cache-fomckk-StyledTabButton:active,
.cache-fomckk-StyledTabButton:focus {
  -webkit-text-decoration: none;
  text-decoration: none;
  outline: none;
}

.cache-fomckk-StyledTabButton:focus-visible {
  outline: auto;
}

.cache-fomckk-StyledTabButton[aria-selected='true'] {
  color: #521094;
  border-bottom-color: #521094;
}

.cache-fomckk-StyledTabButton[aria-disabled='false']:not(:disabled):hover,
.cache-fomckk-StyledTabButton[aria-disabled='false']:not(:disabled):focus,
.cache-fomckk-StyledTabButton[aria-disabled='false']:not(:disabled):active {
  outline: none;
  color: #521094;
  border-bottom-color: #521094;
}

.cache-fomckk-StyledTabButton[aria-disabled='false']:not(:disabled):hover .e1hzf7cr3,
.cache-fomckk-StyledTabButton[aria-disabled='false']:not(:disabled):focus .e1hzf7cr3,
.cache-fomckk-StyledTabButton[aria-disabled='false']:not(:disabled):active .e1hzf7cr3 {
  background-color: #ece5ff;
  border-color: #ece5ff;
  color: #521094;
}

.cache-fomckk-StyledTabButton[aria-disabled='true'],
.cache-fomckk-StyledTabButton:disabled {
  cursor: not-allowed;
  -webkit-filter: grayscale(1) opacity(50%);
  filter: grayscale(1) opacity(50%);
}

.cache-2xo6ya-StyledBox-StyledBadge {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  white-space: nowrap;
  border-radius: 16px;
  padding: 0 16px;
  gap: 8px;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  height: 24px;
  color: #464959;
  background: #f9f9fa;
  border: 1px solid #d9dadd;
  padding: 0 8px;
  margin-left: 8px;
}

.cache-1hjfwlj-BadgeContainer {
  margin-left: 8px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.cache-1chb2kz-StyledTabButton-StyledMenu {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  padding: 8px 16px;
  cursor: pointer;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  white-space: nowrap;
  color: #464959;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  touch-action: manipulation;
  -webkit-transition: color 0.2s;
  transition: color 0.2s;
  border: none;
  background: none;
  border-bottom-width: 2px;
  border-bottom-style: solid;
  border-bottom-color: #d9dadd;
  outline: none;
  font-size: 16px;
  font-family: Asap;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 24px;
}

.cache-1chb2kz-StyledTabButton-StyledMenu:hover,
.cache-1chb2kz-StyledTabButton-StyledMenu:active,
.cache-1chb2kz-StyledTabButton-StyledMenu:focus {
  -webkit-text-decoration: none;
  text-decoration: none;
  outline: none;
}

.cache-1chb2kz-StyledTabButton-StyledMenu:focus-visible {
  outline: auto;
}

.cache-1chb2kz-StyledTabButton-StyledMenu[aria-selected='true'] {
  color: #521094;
  border-bottom-color: #521094;
}

.cache-1chb2kz-StyledTabButton-StyledMenu[aria-disabled='false']:not(:disabled):hover,
.cache-1chb2kz-StyledTabButton-StyledMenu[aria-disabled='false']:not(:disabled):focus,
.cache-1chb2kz-StyledTabButton-StyledMenu[aria-disabled='false']:not(:disabled):active {
  outline: none;
  color: #521094;
  border-bottom-color: #521094;
}

.cache-1chb2kz-StyledTabButton-StyledMenu[aria-disabled='false']:not(:disabled):hover .e1hzf7cr3,
.cache-1chb2kz-StyledTabButton-StyledMenu[aria-disabled='false']:not(:disabled):focus .e1hzf7cr3,
.cache-1chb2kz-StyledTabButton-StyledMenu[aria-disabled='false']:not(:disabled):active .e1hzf7cr3 {
  background-color: #ece5ff;
  border-color: #ece5ff;
  color: #521094;
}

.cache-1chb2kz-StyledTabButton-StyledMenu[aria-disabled='true'],
.cache-1chb2kz-StyledTabButton-StyledMenu:disabled {
  cursor: not-allowed;
  -webkit-filter: grayscale(1) opacity(50%);
  filter: grayscale(1) opacity(50%);
}

.cache-1chb2kz-StyledTabButton-StyledMenu .edb1sh91 {
  color: inherit;
  margin-left: 8px;
  -webkit-transition: 300ms -webkit-transform ease-out;
  transition: 300ms transform ease-out;
}

.cache-1chb2kz-StyledTabButton-StyledMenu[aria-expanded='true'] .edb1sh91 {
  -webkit-transform: rotate(-180deg);
  -moz-transform: rotate(-180deg);
  -ms-transform: rotate(-180deg);
  transform: rotate(-180deg);
}

.cache-1u2dqy2-StyledIcon-sizeStyles-ArrowIcon {
  vertical-align: middle;
  fill: currentColor;
  height: 1em;
  width: 1em;
  min-width: 1em;
  min-height: 1em;
}

.cache-1vnf90i-StyledTabButton-StyledMenu-StyledTabMenu {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  padding: 8px 16px;
  cursor: pointer;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  white-space: nowrap;
  color: #464959;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  touch-action: manipulation;
  -webkit-transition: color 0.2s;
  transition: color 0.2s;
  border: none;
  background: none;
  border-bottom-width: 2px;
  border-bottom-style: solid;
  border-bottom-color: #d9dadd;
  outline: none;
  font-size: 16px;
  font-family: Asap;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 24px;
  position: -webkit-sticky;
  position: sticky;
  right: 0;
  top: 0;
  bottom: 0;
  background: #ffffff;
  box-shadow: 0px 0px 24px 6px #D9DADD66;
}

.cache-1vnf90i-StyledTabButton-StyledMenu-StyledTabMenu:hover,
.cache-1vnf90i-StyledTabButton-StyledMenu-StyledTabMenu:active,
.cache-1vnf90i-StyledTabButton-StyledMenu-StyledTabMenu:focus {
  -webkit-text-decoration: none;
  text-decoration: none;
  outline: none;
}

.cache-1vnf90i-StyledTabButton-StyledMenu-StyledTabMenu:focus-visible {
  outline: auto;
}

.cache-1vnf90i-StyledTabButton-StyledMenu-StyledTabMenu[aria-selected='true'] {
  color: #521094;
  border-bottom-color: #521094;
}

.cache-1vnf90i-StyledTabButton-StyledMenu-StyledTabMenu[aria-disabled='false']:not(:disabled):hover,
.cache-1vnf90i-StyledTabButton-StyledMenu-StyledTabMenu[aria-disabled='false']:not(:disabled):focus,
.cache-1vnf90i-StyledTabButton-StyledMenu-StyledTabMenu[aria-disabled='false']:not(:disabled):active {
  outline: none;
  color: #521094;
  border-bottom-color: #521094;
}

.cache-1vnf90i-StyledTabButton-StyledMenu-StyledTabMenu[aria-disabled='false']:not(:disabled):hover .e1hzf7cr3,
.cache-1vnf90i-StyledTabButton-StyledMenu-StyledTabMenu[aria-disabled='false']:not(:disabled):focus .e1hzf7cr3,
.cache-1vnf90i-StyledTabButton-StyledMenu-StyledTabMenu[aria-disabled='false']:not(:disabled):active .e1hzf7cr3 {
  background-color: #ece5ff;
  border-color: #ece5ff;
  color: #521094;
}

.cache-1vnf90i-StyledTabButton-StyledMenu-StyledTabMenu[aria-disabled='true'],
.cache-1vnf90i-StyledTabButton-StyledMenu-StyledTabMenu:disabled {
  cursor: not-allowed;
  -webkit-filter: grayscale(1) opacity(50%);
  filter: grayscale(1) opacity(50%);
}

.cache-1vnf90i-StyledTabButton-StyledMenu-StyledTabMenu .edb1sh91 {
  color: inherit;
  margin-left: 8px;
  -webkit-transition: 300ms -webkit-transform ease-out;
  transition: 300ms transform ease-out;
}

.cache-1vnf90i-StyledTabButton-StyledMenu-StyledTabMenu[aria-expanded='true'] .edb1sh91 {
  -webkit-transform: rotate(-180deg);
  -moz-transform: rotate(-180deg);
  -ms-transform: rotate(-180deg);
  transform: rotate(-180deg);
}

<div
    class="cache-ixreip-TabsContainer ewug27g0"
    role="tablist"
  >
    <button
      aria-disabled="false"
      aria-selected="true"
      as="button"
      class="cache-1m0c41a-StyledTabButton e1hzf7cr0"
      role="tab"
      type="button"
    >
      First
      <div
        as="span"
        class="e1hzf7cr3 cache-qefozn-StyledBox-StyledBadge ej33bna0"
        role="status"
      >
        <p
          class="ej33bna1 cache-es9czf-StyledText-StyledText e13y3mga0"
        >
          2
        </p>
      </div>
    </button>
    <button
      aria-disabled="false"
      aria-label="1"
      aria-selected="false"
      as="button"
      class="cache-fomckk-StyledTabButton e1hzf7cr0"
      role="tab"
      type="button"
    >
      Second
    </button>
    <button
      aria-disabled="false"
      aria-selected="false"
      as="button"
      class="cache-fomckk-StyledTabButton e1hzf7cr0"
      role="tab"
      type="button"
    >
      Undefined
    </button>
    <button
      aria-disabled="false"
      aria-selected="false"
      as="button"
      class="cache-fomckk-StyledTabButton e1hzf7cr0"
      role="tab"
      type="button"
    >
      Counter
      <div
        as="span"
        class="e1hzf7cr3 cache-2xo6ya-StyledBox-StyledBadge ej33bna0"
        role="status"
      >
        <p
          class="ej33bna1 cache-es9czf-StyledText-StyledText e13y3mga0"
        >
          12
        </p>
      </div>
    </button>
    <button
      aria-disabled="false"
      aria-label="2"
      aria-selected="false"
      as="button"
      class="cache-fomckk-StyledTabButton e1hzf7cr0"
      role="tab"
      type="button"
    >
      Counter no items
      <div
        as="span"
        class="e1hzf7cr3 cache-2xo6ya-StyledBox-StyledBadge ej33bna0"
        role="status"
      >
        <p
          class="ej33bna1 cache-es9czf-StyledText-StyledText e13y3mga0"
        >
          0
        </p>
      </div>
    </button>
    <button
      aria-disabled="false"
      aria-selected="false"
      as="button"
      class="cache-fomckk-StyledTabButton e1hzf7cr0"
      role="tab"
      type="button"
    >
      Conter and badge
      <div
        as="span"
        class="e1hzf7cr3 cache-2xo6ya-StyledBox-StyledBadge ej33bna0"
        role="status"
      >
        <p
          class="ej33bna1 cache-es9czf-StyledText-StyledText e13y3mga0"
        >
          12
        </p>
      </div>
      <span
        class="cache-1hjfwlj-BadgeContainer e1hzf7cr1"
      >
        Badge
      </span>
    </button>
    <button
      aria-disabled="false"
      aria-selected="false"
      as="button"
      class="cache-fomckk-StyledTabButton e1hzf7cr0"
      role="tab"
      type="button"
    >
      Badge
      <span
        class="cache-1hjfwlj-BadgeContainer e1hzf7cr1"
      >
        Badge
      </span>
    </button>
    <button
      aria-disabled="false"
      aria-selected="false"
      as="button"
      class="cache-fomckk-StyledTabButton e1hzf7cr0"
      role="tab"
      type="button"
    >
      Very long tab name
    </button>
    <button
      aria-disabled="false"
      aria-selected="false"
      as="button"
      class="cache-fomckk-StyledTabButton e1hzf7cr0"
      role="tab"
      type="button"
    >
      Very long tab name
    </button>
    <button
      aria-disabled="false"
      aria-selected="false"
      as="button"
      class="cache-fomckk-StyledTabButton e1hzf7cr0"
      role="tab"
      type="button"
    >
      Very long tab name
    </button>
    <button
      aria-disabled="false"
      aria-selected="false"
      as="button"
      class="cache-fomckk-StyledTabButton e1hzf7cr0"
      role="tab"
      type="button"
    >
      Very long tab name
    </button>
    <button
      aria-disabled="false"
      aria-selected="false"
      as="button"
      class="cache-fomckk-StyledTabButton e1hzf7cr0"
      role="tab"
      type="button"
    >
      Very long tab name
    </button>
    <button
      aria-disabled="false"
      aria-selected="false"
      as="button"
      class="cache-fomckk-StyledTabButton e1hzf7cr0"
      role="tab"
      type="button"
    >
      Very long tab name
    </button>
    <button
      aria-disabled="false"
      aria-selected="false"
      as="button"
      class="cache-fomckk-StyledTabButton e1hzf7cr0"
      role="tab"
      type="button"
    >
      Very long tab name
    </button>
    <button
      aria-disabled="false"
      aria-selected="false"
      as="button"
      class="cache-fomckk-StyledTabButton e1hzf7cr0"
      role="tab"
      type="button"
    >
      Very long tab name
    </button>
    <button
      aria-disabled="false"
      aria-selected="false"
      as="button"
      class="cache-fomckk-StyledTabButton e1hzf7cr0"
      role="tab"
      type="button"
    >
      Very long tab name
    </button>
    <button
      aria-disabled="false"
      aria-selected="false"
      as="button"
      class="cache-fomckk-StyledTabButton e1hzf7cr0"
      role="tab"
      type="button"
    >
      Very long tab name
    </button>
    <button
      aria-disabled="false"
      aria-selected="false"
      as="button"
      class="cache-fomckk-StyledTabButton e1hzf7cr0"
      role="tab"
      type="button"
    >
      Very long tab name
    </button>
    <button
      aria-controls="test"
      aria-disabled="false"
      aria-expanded="false"
      aria-haspopup="dialog"
      class="cache-1chb2kz-StyledTabButton-StyledMenu edb1sh90"
      role="tab"
      type="button"
    >
      Blabla
      <svg
        class="edb1sh91 cache-1u2dqy2-StyledIcon-sizeStyles-ArrowIcon e5nqbfp0"
        viewBox="0 0 16 16"
      >
        <path
          d="M8 11c-.28 0-.55-.11-.74-.3L3.3 6.77a1.04 1.04 0 0 1 0-1.47 1.06 1.06 0 0 1 1.49 0L8 8.48l3.2-3.17a1.06 1.06 0 0 1 1.72.33 1.04 1.04 0 0 1-.23 1.14L8.74 10.7c-.2.2-.46.31-.74.31"
        />
      </svg>
    </button>
    <button
      aria-controls="id-d9i348"
      aria-disabled="false"
      aria-expanded="true"
      aria-haspopup="dialog"
      class="ewug27g1 cache-1vnf90i-StyledTabButton-StyledMenu-StyledTabMenu edb1sh90"
      role="tab"
      style="box-shadow: none;"
      type="button"
    >
      More
      <svg
        class="edb1sh91 cache-1u2dqy2-StyledIcon-sizeStyles-ArrowIcon e5nqbfp0"
        viewBox="0 0 16 16"
      >
        <path
          d="M8 11c-.28 0-.55-.11-.74-.3L3.3 6.77a1.04 1.04 0 0 1 0-1.47 1.06 1.06 0 0 1 1.49 0L8 8.48l3.2-3.17a1.06 1.06 0 0 1 1.72.33 1.04 1.04 0 0 1-.23 1.14L8.74 10.7c-.2.2-.46.31-.74.31"
        />
      </svg>
    </button>
  </div>
  .cache-1ibieyd-StyledPopover {
  border-radius: 4px;
  background-color: #ffffff;
  color: #464959;
  box-shadow: 0px 4px 24px 6px #D9DADD66;
}

<div
    class="__reakit-portal"
  >
    <div
      aria-label="Menu"
      class="cache-1ibieyd-StyledPopover e1hqs9p51"
      data-dialog="true"
      hidden=""
      id="test"
      role="dialog"
      style="position: fixed; left: 100%; top: 100%; display: none;"
      tabindex="-1"
    />
  </div>
  .cache-1ibieyd-StyledPopover {
  border-radius: 4px;
  background-color: #ffffff;
  color: #464959;
  box-shadow: 0px 4px 24px 6px #D9DADD66;
}

.cache-1scjmt9-MenuList-centerStyles-bottomStyles-bottom {
  background-color: #ffffff;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  text-align: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  color: #464959;
  border-radius: 4px;
  position: relative;
  box-shadow: 0px 0px 24px 6px #D9DADD66;
}

.cache-1scjmt9-MenuList-centerStyles-bottomStyles-bottom:after,
.cache-1scjmt9-MenuList-centerStyles-bottomStyles-bottom:before {
  border: solid transparent;
  border-width: 9px;
  content: ' ';
  height: 0;
  width: 0;
  position: absolute;
  pointer-events: none;
}

.cache-1scjmt9-MenuList-centerStyles-bottomStyles-bottom:after {
  border-color: transparent;
}

.cache-1scjmt9-MenuList-centerStyles-bottomStyles-bottom:before {
  border-color: transparent;
}

.cache-1scjmt9-MenuList-centerStyles-bottomStyles-bottom:after,
.cache-1scjmt9-MenuList-centerStyles-bottomStyles-bottom:before {
  left: 50%;
  -webkit-transform: translateX(-50%);
  -moz-transform: translateX(-50%);
  -ms-transform: translateX(-50%);
  transform: translateX(-50%);
}

.cache-1scjmt9-MenuList-centerStyles-bottomStyles-bottom:after,
.cache-1scjmt9-MenuList-centerStyles-bottomStyles-bottom:before {
  bottom: 100%;
}

.cache-1scjmt9-MenuList-centerStyles-bottomStyles-bottom:after {
  border-bottom-color: #ffffff;
}

.cache-1scjmt9-MenuList-centerStyles-bottomStyles-bottom:before {
  border-bottom-color: transparent;
}

.cache-vlz0oa-MenuContainer {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.cache-vlz0oa-MenuContainer .e1hzf7cr0 {
  font-size: 14px;
  line-height: 20px;
  font-weight: inherit;
  padding: 8px 16px;
  border-bottom-width: 1px;
  width: 100%;
  cursor: pointer;
  min-width: 110px;
  background-color: transparent;
}

.cache-1m0c41a-StyledTabButton {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  padding: 8px 16px;
  cursor: pointer;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  white-space: nowrap;
  color: #464959;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  touch-action: manipulation;
  -webkit-transition: color 0.2s;
  transition: color 0.2s;
  border: none;
  background: none;
  border-bottom-width: 2px;
  border-bottom-style: solid;
  border-bottom-color: #d9dadd;
  outline: none;
  font-size: 16px;
  font-family: Asap;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 24px;
}

.cache-1m0c41a-StyledTabButton:hover,
.cache-1m0c41a-StyledTabButton:active,
.cache-1m0c41a-StyledTabButton:focus {
  -webkit-text-decoration: none;
  text-decoration: none;
  outline: none;
}

.cache-1m0c41a-StyledTabButton:focus-visible {
  outline: auto;
}

.cache-1m0c41a-StyledTabButton[aria-selected='true'] {
  color: #521094;
  border-bottom-color: #521094;
}

.cache-1m0c41a-StyledTabButton[aria-disabled='false']:not(:disabled):hover,
.cache-1m0c41a-StyledTabButton[aria-disabled='false']:not(:disabled):focus,
.cache-1m0c41a-StyledTabButton[aria-disabled='false']:not(:disabled):active {
  outline: none;
  color: #521094;
  border-bottom-color: #521094;
}

.cache-1m0c41a-StyledTabButton[aria-disabled='true'],
.cache-1m0c41a-StyledTabButton:disabled {
  cursor: not-allowed;
  -webkit-filter: grayscale(1) opacity(50%);
  filter: grayscale(1) opacity(50%);
}

.cache-qefozn-StyledBox-StyledBadge {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  white-space: nowrap;
  border-radius: 16px;
  padding: 0 16px;
  gap: 8px;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  height: 24px;
  color: #ffffff;
  background: #521094;
  border: 1px solid #521094;
  padding: 0 8px;
  margin-left: 8px;
}

.cache-es9czf-StyledText-StyledText {
  color: #464959;
  font-size: 16px;
  font-family: Asap;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 24px;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  text-transform: uppercase;
  font-size: 12px;
  color: inherit;
}

.cache-fomckk-StyledTabButton {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  padding: 8px 16px;
  cursor: pointer;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  white-space: nowrap;
  color: #464959;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  touch-action: manipulation;
  -webkit-transition: color 0.2s;
  transition: color 0.2s;
  border: none;
  background: none;
  border-bottom-width: 2px;
  border-bottom-style: solid;
  border-bottom-color: #d9dadd;
  outline: none;
  font-size: 16px;
  font-family: Asap;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 24px;
}

.cache-fomckk-StyledTabButton:hover,
.cache-fomckk-StyledTabButton:active,
.cache-fomckk-StyledTabButton:focus {
  -webkit-text-decoration: none;
  text-decoration: none;
  outline: none;
}

.cache-fomckk-StyledTabButton:focus-visible {
  outline: auto;
}

.cache-fomckk-StyledTabButton[aria-selected='true'] {
  color: #521094;
  border-bottom-color: #521094;
}

.cache-fomckk-StyledTabButton[aria-disabled='false']:not(:disabled):hover,
.cache-fomckk-StyledTabButton[aria-disabled='false']:not(:disabled):focus,
.cache-fomckk-StyledTabButton[aria-disabled='false']:not(:disabled):active {
  outline: none;
  color: #521094;
  border-bottom-color: #521094;
}

.cache-fomckk-StyledTabButton[aria-disabled='false']:not(:disabled):hover .e1hzf7cr3,
.cache-fomckk-StyledTabButton[aria-disabled='false']:not(:disabled):focus .e1hzf7cr3,
.cache-fomckk-StyledTabButton[aria-disabled='false']:not(:disabled):active .e1hzf7cr3 {
  background-color: #ece5ff;
  border-color: #ece5ff;
  color: #521094;
}

.cache-fomckk-StyledTabButton[aria-disabled='true'],
.cache-fomckk-StyledTabButton:disabled {
  cursor: not-allowed;
  -webkit-filter: grayscale(1) opacity(50%);
  filter: grayscale(1) opacity(50%);
}

.cache-2xo6ya-StyledBox-StyledBadge {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  white-space: nowrap;
  border-radius: 16px;
  padding: 0 16px;
  gap: 8px;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  height: 24px;
  color: #464959;
  background: #f9f9fa;
  border: 1px solid #d9dadd;
  padding: 0 8px;
  margin-left: 8px;
}

.cache-1hjfwlj-BadgeContainer {
  margin-left: 8px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.cache-1chb2kz-StyledTabButton-StyledMenu {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  padding: 8px 16px;
  cursor: pointer;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  white-space: nowrap;
  color: #464959;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  touch-action: manipulation;
  -webkit-transition: color 0.2s;
  transition: color 0.2s;
  border: none;
  background: none;
  border-bottom-width: 2px;
  border-bottom-style: solid;
  border-bottom-color: #d9dadd;
  outline: none;
  font-size: 16px;
  font-family: Asap;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 24px;
}

.cache-1chb2kz-StyledTabButton-StyledMenu:hover,
.cache-1chb2kz-StyledTabButton-StyledMenu:active,
.cache-1chb2kz-StyledTabButton-StyledMenu:focus {
  -webkit-text-decoration: none;
  text-decoration: none;
  outline: none;
}

.cache-1chb2kz-StyledTabButton-StyledMenu:focus-visible {
  outline: auto;
}

.cache-1chb2kz-StyledTabButton-StyledMenu[aria-selected='true'] {
  color: #521094;
  border-bottom-color: #521094;
}

.cache-1chb2kz-StyledTabButton-StyledMenu[aria-disabled='false']:not(:disabled):hover,
.cache-1chb2kz-StyledTabButton-StyledMenu[aria-disabled='false']:not(:disabled):focus,
.cache-1chb2kz-StyledTabButton-StyledMenu[aria-disabled='false']:not(:disabled):active {
  outline: none;
  color: #521094;
  border-bottom-color: #521094;
}

.cache-1chb2kz-StyledTabButton-StyledMenu[aria-disabled='false']:not(:disabled):hover .e1hzf7cr3,
.cache-1chb2kz-StyledTabButton-StyledMenu[aria-disabled='false']:not(:disabled):focus .e1hzf7cr3,
.cache-1chb2kz-StyledTabButton-StyledMenu[aria-disabled='false']:not(:disabled):active .e1hzf7cr3 {
  background-color: #ece5ff;
  border-color: #ece5ff;
  color: #521094;
}

.cache-1chb2kz-StyledTabButton-StyledMenu[aria-disabled='true'],
.cache-1chb2kz-StyledTabButton-StyledMenu:disabled {
  cursor: not-allowed;
  -webkit-filter: grayscale(1) opacity(50%);
  filter: grayscale(1) opacity(50%);
}

.cache-1chb2kz-StyledTabButton-StyledMenu .edb1sh91 {
  color: inherit;
  margin-left: 8px;
  -webkit-transition: 300ms -webkit-transform ease-out;
  transition: 300ms transform ease-out;
}

.cache-1chb2kz-StyledTabButton-StyledMenu[aria-expanded='true'] .edb1sh91 {
  -webkit-transform: rotate(-180deg);
  -moz-transform: rotate(-180deg);
  -ms-transform: rotate(-180deg);
  transform: rotate(-180deg);
}

.cache-1u2dqy2-StyledIcon-sizeStyles-ArrowIcon {
  vertical-align: middle;
  fill: currentColor;
  height: 1em;
  width: 1em;
  min-width: 1em;
  min-height: 1em;
}

<div
    class="__reakit-portal"
  >
    <div
      aria-label="Menu"
      class="cache-1ibieyd-StyledPopover e1hqs9p51"
      data-dialog="true"
      id="id-d9i348"
      role="dialog"
      style="position: fixed; left: 100%; top: 100%;"
      tabindex="-1"
    >
      <div
        class="cache-1scjmt9-MenuList-centerStyles-bottomStyles-bottom e1hqs9p50"
        role="menu"
      >
        <div
          class="cache-vlz0oa-MenuContainer ewug27g2"
        >
          <button
            aria-disabled="false"
            aria-selected="true"
            as="button"
            class="cache-1m0c41a-StyledTabButton e1hzf7cr0"
            role="tab"
            type="button"
          >
            First
            <div
              as="span"
              class="e1hzf7cr3 cache-qefozn-StyledBox-StyledBadge ej33bna0"
              role="status"
            >
              <p
                class="ej33bna1 cache-es9czf-StyledText-StyledText e13y3mga0"
              >
                2
              </p>
            </div>
          </button>
          <button
            aria-disabled="false"
            aria-label="1"
            aria-selected="false"
            as="button"
            class="cache-fomckk-StyledTabButton e1hzf7cr0"
            role="tab"
            type="button"
          >
            Second
          </button>
          <button
            aria-disabled="false"
            aria-selected="false"
            as="button"
            class="cache-fomckk-StyledTabButton e1hzf7cr0"
            role="tab"
            type="button"
          >
            Undefined
          </button>
          <button
            aria-disabled="false"
            aria-selected="false"
            as="button"
            class="cache-fomckk-StyledTabButton e1hzf7cr0"
            role="tab"
            type="button"
          >
            Counter
            <div
              as="span"
              class="e1hzf7cr3 cache-2xo6ya-StyledBox-StyledBadge ej33bna0"
              role="status"
            >
              <p
                class="ej33bna1 cache-es9czf-StyledText-StyledText e13y3mga0"
              >
                12
              </p>
            </div>
          </button>
          <button
            aria-disabled="false"
            aria-label="2"
            aria-selected="false"
            as="button"
            class="cache-fomckk-StyledTabButton e1hzf7cr0"
            role="tab"
            type="button"
          >
            Counter no items
            <div
              as="span"
              class="e1hzf7cr3 cache-2xo6ya-StyledBox-StyledBadge ej33bna0"
              role="status"
            >
              <p
                class="ej33bna1 cache-es9czf-StyledText-StyledText e13y3mga0"
              >
                0
              </p>
            </div>
          </button>
          <button
            aria-disabled="false"
            aria-selected="false"
            as="button"
            class="cache-fomckk-StyledTabButton e1hzf7cr0"
            role="tab"
            type="button"
          >
            Conter and badge
            <div
              as="span"
              class="e1hzf7cr3 cache-2xo6ya-StyledBox-StyledBadge ej33bna0"
              role="status"
            >
              <p
                class="ej33bna1 cache-es9czf-StyledText-StyledText e13y3mga0"
              >
                12
              </p>
            </div>
            <span
              class="cache-1hjfwlj-BadgeContainer e1hzf7cr1"
            >
              Badge
            </span>
          </button>
          <button
            aria-disabled="false"
            aria-selected="false"
            as="button"
            class="cache-fomckk-StyledTabButton e1hzf7cr0"
            role="tab"
            type="button"
          >
            Badge
            <span
              class="cache-1hjfwlj-BadgeContainer e1hzf7cr1"
            >
              Badge
            </span>
          </button>
          <button
            aria-disabled="false"
            aria-selected="false"
            as="button"
            class="cache-fomckk-StyledTabButton e1hzf7cr0"
            role="tab"
            type="button"
          >
            Very long tab name
          </button>
          <button
            aria-disabled="false"
            aria-selected="false"
            as="button"
            class="cache-fomckk-StyledTabButton e1hzf7cr0"
            role="tab"
            type="button"
          >
            Very long tab name
          </button>
          <button
            aria-disabled="false"
            aria-selected="false"
            as="button"
            class="cache-fomckk-StyledTabButton e1hzf7cr0"
            role="tab"
            type="button"
          >
            Very long tab name
          </button>
          <button
            aria-disabled="false"
            aria-selected="false"
            as="button"
            class="cache-fomckk-StyledTabButton e1hzf7cr0"
            role="tab"
            type="button"
          >
            Very long tab name
          </button>
          <button
            aria-disabled="false"
            aria-selected="false"
            as="button"
            class="cache-fomckk-StyledTabButton e1hzf7cr0"
            role="tab"
            type="button"
          >
            Very long tab name
          </button>
          <button
            aria-disabled="false"
            aria-selected="false"
            as="button"
            class="cache-fomckk-StyledTabButton e1hzf7cr0"
            role="tab"
            type="button"
          >
            Very long tab name
          </button>
          <button
            aria-disabled="false"
            aria-selected="false"
            as="button"
            class="cache-fomckk-StyledTabButton e1hzf7cr0"
            role="tab"
            type="button"
          >
            Very long tab name
          </button>
          <button
            aria-disabled="false"
            aria-selected="false"
            as="button"
            class="cache-fomckk-StyledTabButton e1hzf7cr0"
            role="tab"
            type="button"
          >
            Very long tab name
          </button>
          <button
            aria-disabled="false"
            aria-selected="false"
            as="button"
            class="cache-fomckk-StyledTabButton e1hzf7cr0"
            role="tab"
            type="button"
          >
            Very long tab name
          </button>
          <button
            aria-disabled="false"
            aria-selected="false"
            as="button"
            class="cache-fomckk-StyledTabButton e1hzf7cr0"
            role="tab"
            type="button"
          >
            Very long tab name
          </button>
          <button
            aria-disabled="false"
            aria-selected="false"
            as="button"
            class="cache-fomckk-StyledTabButton e1hzf7cr0"
            role="tab"
            type="button"
          >
            Very long tab name
          </button>
          <button
            aria-controls="test"
            aria-disabled="false"
            aria-expanded="false"
            aria-haspopup="dialog"
            class="cache-1chb2kz-StyledTabButton-StyledMenu edb1sh90"
            role="tab"
            type="button"
          >
            Blabla
            <svg
              class="edb1sh91 cache-1u2dqy2-StyledIcon-sizeStyles-ArrowIcon e5nqbfp0"
              viewBox="0 0 16 16"
            >
              <path
                d="M8 11c-.28 0-.55-.11-.74-.3L3.3 6.77a1.04 1.04 0 0 1 0-1.47 1.06 1.06 0 0 1 1.49 0L8 8.48l3.2-3.17a1.06 1.06 0 0 1 1.72.33 1.04 1.04 0 0 1-.23 1.14L8.74 10.7c-.2.2-.46.31-.74.31"
              />
            </svg>
          </button>
        </div>
      </div>
    </div>
    <div
      class="__reakit-portal"
    >
      <div
        aria-label="Menu"
        class="cache-1ibieyd-StyledPopover e1hqs9p51"
        data-dialog="true"
        hidden=""
        id="test"
        role="dialog"
        style="position: fixed; left: 100%; top: 100%; display: none;"
        tabindex="-1"
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`Tabs renders correctly with custom Tabs component 1`] = `
<DocumentFragment>
  .cache-ixreip-TabsContainer {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  overflow-x: scroll;
  position: relative;
  z-index: 0;
  -ms-overflow-style: none;
  scrollbar-width: none;
}

.cache-ixreip-TabsContainer::after {
  z-index: -1;
  content: '';
  position: absolute;
  bottom: 0;
  left: 0;
  right: 0;
  height: 2px;
  background: #d9dadd;
}

.cache-ixreip-TabsContainer::-webkit-scrollbar {
  display: none;
}

.cache-fomckk-StyledTabButton {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  padding: 8px 16px;
  cursor: pointer;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  white-space: nowrap;
  color: #464959;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  touch-action: manipulation;
  -webkit-transition: color 0.2s;
  transition: color 0.2s;
  border: none;
  background: none;
  border-bottom-width: 2px;
  border-bottom-style: solid;
  border-bottom-color: #d9dadd;
  outline: none;
  font-size: 16px;
  font-family: Asap;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 24px;
}

.cache-fomckk-StyledTabButton:hover,
.cache-fomckk-StyledTabButton:active,
.cache-fomckk-StyledTabButton:focus {
  -webkit-text-decoration: none;
  text-decoration: none;
  outline: none;
}

.cache-fomckk-StyledTabButton:focus-visible {
  outline: auto;
}

.cache-fomckk-StyledTabButton[aria-selected='true'] {
  color: #521094;
  border-bottom-color: #521094;
}

.cache-fomckk-StyledTabButton[aria-disabled='false']:not(:disabled):hover,
.cache-fomckk-StyledTabButton[aria-disabled='false']:not(:disabled):focus,
.cache-fomckk-StyledTabButton[aria-disabled='false']:not(:disabled):active {
  outline: none;
  color: #521094;
  border-bottom-color: #521094;
}

.cache-fomckk-StyledTabButton[aria-disabled='false']:not(:disabled):hover .e1hzf7cr3,
.cache-fomckk-StyledTabButton[aria-disabled='false']:not(:disabled):focus .e1hzf7cr3,
.cache-fomckk-StyledTabButton[aria-disabled='false']:not(:disabled):active .e1hzf7cr3 {
  background-color: #ece5ff;
  border-color: #ece5ff;
  color: #521094;
}

.cache-fomckk-StyledTabButton[aria-disabled='true'],
.cache-fomckk-StyledTabButton:disabled {
  cursor: not-allowed;
  -webkit-filter: grayscale(1) opacity(50%);
  filter: grayscale(1) opacity(50%);
}

<div
    class="cache-ixreip-TabsContainer ewug27g0"
    role="tablist"
  >
    <button
      aria-disabled="false"
      aria-selected="false"
      as="div"
      class="cache-fomckk-StyledTabButton e1hzf7cr0"
      role="tab"
    >
      First
    </button>
    <button
      aria-disabled="false"
      aria-selected="false"
      as="a"
      class="cache-fomckk-StyledTabButton e1hzf7cr0"
      role="tab"
    >
      Second
    </button>
    <button
      aria-disabled="true"
      aria-selected="false"
      as="[object Object]"
      class="cache-fomckk-StyledTabButton e1hzf7cr0"
      href="#"
      role="tab"
    >
      Very long tab name
    </button>
  </div>
</DocumentFragment>
`;
